tests/fixtures/errors/e0407_abs_of_unsigned.mimz
// expect: E0407
module M {
  in a: bits[4]
  out y: bits[4]
  y = abs(a)
}
